RESOLVED FIXED69926
[Qt][WK2] Fix build after QSGItem API changes
https://bugs.webkit.org/show_bug.cgi?id=69926
Summary [Qt][WK2] Fix build after QSGItem API changes
Simon Hausmann
Reported 2011-10-12 07:40:35 PDT
[Qt][WK2] Fix build after QSGItem API changes
Attachments
Patch (9.07 KB, patch)
2011-10-12 07:46 PDT, Simon Hausmann
kenneth: review+
hausmann: commit-queue-
Simon Hausmann
Comment 1 2011-10-12 07:46:56 PDT
Simon Hausmann
Comment 2 2011-10-12 07:47:51 PDT
Comment on attachment 110684 [details] Patch cq-. Landing needs to be synchronized with the wk2 bot
Kenneth Rohde Christiansen
Comment 3 2011-10-12 07:52:39 PDT
Comment on attachment 110684 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=110684&action=review > Source/WebKit2/ChangeLog:14 > + This patch adapts the desktop webview as well as the page proxy to handle these > + kind of events. Nice :-)
Simon Hausmann
Comment 4 2011-10-13 10:49:37 PDT
*** Bug 70038 has been marked as a duplicate of this bug. ***
Simon Hausmann
Comment 5 2011-10-14 03:17:02 PDT
Note You need to log in before you can comment on or make changes to this bug.